// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOM structure matches snapshot 1`] = `
<div>
  <div>
    <form
      action=""
      method=""
      role="form"
    >
      <h1>
        Log In.
      </h1>
    </form>
  </div>
</div>
`;

exports[`render of Form 1`] = `
<form
  action=""
  method=""
  role="form"
>
  <h1>
    Log In.
  </h1>
</form>
`;
